@@ -14,7 +14,10 @@
 
 package com.google.googlejavaformat.java;
 
+import static com.google.common.base.StandardSystemProperty.JAVA_CLASS_PATH;
+import static com.google.common.base.StandardSystemProperty.JAVA_HOME;
 import static com.google.common.truth.Truth.assertThat;
+import static com.google.common.truth.Truth.assertWithMessage;
 import static java.nio.charset.StandardCharsets.UTF_8;
 
 import com.google.common.base.Joiner;
@@ -22,6 +25,7 @@ import com.google.common.collect.ImmutableList;
 import com.google.common.io.ByteStreams;
 import java.io.BufferedWriter;
 import java.io.ByteArrayInputStream;
+import java.io.File;
 import java.io.InputStream;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
@@ -47,6 +51,16 @@ public class MainTest {
 
   // PrintWriter instances used below are hard-coded to use system-default line separator.
   private final Joiner joiner = Joiner.on(System.lineSeparator());
+
+  private static final ImmutableList<String> ADD_EXPORTS =
+      ImmutableList.of(
+          "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED");
 
   @Test
   public void testUsageOutput() {
@@ -98,18 +112,20 @@ public class MainTest {
             new PrintWriter(new BufferedWriter(new OutputStreamWriter(System.err, UTF_8)), true),
             System.in);
     int errorCode = main.format("-replace", path.toAbsolutePath().toString());
-    assertThat(errorCode).named("Error Code").isEqualTo(0);
+    assertWithMessage("Error Code").that(errorCode).isEqualTo(0);
   }
 
   @Test
   public void testMain() throws Exception {
     Process process =
         new ProcessBuilder(
-                ImmutableList.of(
-                    Paths.get(System.getProperty("java.home")).resolve("bin/java").toString(),
-                    "-cp",
-                    System.getProperty("java.class.path"),
-                    Main.class.getName()))
+                ImmutableList.<String>builder()
+                    .add(Paths.get(JAVA_HOME.value()).resolve("bin/java").toString())
+                    .addAll(ADD_EXPORTS)
+                    .add("-cp")
+                    .add(JAVA_CLASS_PATH.value())
+                    .add(Main.class.getName())
+                    .build())
             .redirectError(Redirect.PIPE)
             .redirectOutput(Redirect.PIPE)
             .start();
@@ -292,7 +308,7 @@ public class MainTest {
               new PrintWriter(err, true),
               new ByteArrayInputStream(joiner.join(input).getBytes(UTF_8)));
       assertThat(main.format("-")).isEqualTo(1);
-      assertThat(err.toString()).contains("<stdin>:4:3: error: class, interface, or enum expected");
+      assertThat(err.toString()).contains("<stdin>:4:3: error: class, interface");
 
     } finally {
       Locale.setDefault(backupLocale);
@@ -386,11 +402,43 @@ public class MainTest {
 
     assertThat(out.toString())
         .isEqualTo(
-            b.toAbsolutePath().toString()
+            b.toAbsolutePath()
                 + System.lineSeparator()
-                + c.toAbsolutePath().toString()
+                + c.toAbsolutePath()
                 + System.lineSeparator());
     assertThat(err.toString()).isEmpty();
+  }
+
+  @Test
+  public void keepGoingWhenFilesDontExist() throws Exception {
+    Path a = testFolder.newFile("A.java").toPath();
+    Path b = testFolder.newFile("B.java").toPath();
+    File cFile = testFolder.newFile("C.java");
+    Path c = cFile.toPath();
+    cFile.delete();
+
+    Files.write(a, "class A{}\n".getBytes(UTF_8));
+    Files.write(b, "class B{}\n".getBytes(UTF_8));
+
+    StringWriter out = new StringWriter();
+    StringWriter err = new StringWriter();
+    Main main = new Main(new PrintWriter(out, true), new PrintWriter(err, true), System.in);
+
+    int exitCode =
+        main.format(
+            "",
+            a.toAbsolutePath().toString(),
+            c.toAbsolutePath().toString(),
+            b.toAbsolutePath().toString());
+
+    // Formatter returns failure if a file was not present.
+    assertThat(exitCode).isEqualTo(1);
+
+    // Present files were correctly formatted.
+    assertThat(out.toString()).isEqualTo("class A {}\nclass B {}\n");
+
+    // File not found still showed error.
+    assertThat(err.toString()).isNotEmpty();
   }
 
   @Test
@@ -399,14 +447,16 @@ public class MainTest {
     Files.write(path, "class Test {\n}\n".getBytes(UTF_8));
     Process process =
         new ProcessBuilder(
-                ImmutableList.of(
-                    Paths.get(System.getProperty("java.home")).resolve("bin/java").toString(),
-                    "-cp",
-                    System.getProperty("java.class.path"),
-                    Main.class.getName(),
-                    "-n",
-                    "--set-exit-if-changed",
-                    "-"))
+                ImmutableList.<String>builder()
+                    .add(Paths.get(JAVA_HOME.value()).resolve("bin/java").toString())
+                    .addAll(ADD_EXPORTS)
+                    .add("-cp")
+                    .add(JAVA_CLASS_PATH.value())
+                    .add(Main.class.getName())
+                    .add("-n")
+                    .add("--set-exit-if-changed")
+                    .add("-")
+                    .build())
             .redirectInput(path.toFile())
             .redirectError(Redirect.PIPE)
             .redirectOutput(Redirect.PIPE)
@@ -425,14 +475,16 @@ public class MainTest {
     Files.write(path, "class Test {\n}\n".getBytes(UTF_8));
     Process process =
         new ProcessBuilder(
-                ImmutableList.of(
-                    Paths.get(System.getProperty("java.home")).resolve("bin/java").toString(),
-                    "-cp",
-                    System.getProperty("java.class.path"),
-                    Main.class.getName(),
-                    "-n",
-                    "--set-exit-if-changed",
-                    path.toAbsolutePath().toString()))
+                ImmutableList.<String>builder()
+                    .add(Paths.get(JAVA_HOME.value()).resolve("bin/java").toString())
+                    .addAll(ADD_EXPORTS)
+                    .add("-cp")
+                    .add(JAVA_CLASS_PATH.value())
+                    .add(Main.class.getName())
+                    .add("-n")
+                    .add("--set-exit-if-changed")
+                    .add(path.toAbsolutePath().toString())
+                    .build())
             .redirectError(Redirect.PIPE)
             .redirectOutput(Redirect.PIPE)
             .start();
@@ -440,7 +492,7 @@ public class MainTest {
     String err = new String(ByteStreams.toByteArray(process.getErrorStream()), UTF_8);
     String out = new String(ByteStreams.toByteArray(process.getInputStream()), UTF_8);
     assertThat(err).isEmpty();
-    assertThat(out).isEqualTo(path.toAbsolutePath().toString() + System.lineSeparator());
+    assertThat(out).isEqualTo(path.toAbsolutePath() + System.lineSeparator());
     assertThat(process.exitValue()).isEqualTo(1);
   }
 
@@ -457,7 +509,7 @@ public class MainTest {
             new PrintWriter(err, true),
             new ByteArrayInputStream(joiner.join(input).getBytes(UTF_8)));
     assertThat(main.format("--assume-filename=Foo.java", "-")).isEqualTo(1);
-    assertThat(err.toString()).contains("Foo.java:1:15: error: class, interface, or enum expected");
+    assertThat(err.toString()).contains("Foo.java:1:15: error: class, interface");
   }
 
   @Test
@@ -475,5 +527,90 @@ public class MainTest {
             new ByteArrayInputStream(joiner.join(input).getBytes(UTF_8)));
     assertThat(main.format("--dry-run", "--assume-filename=Foo.java", "-")).isEqualTo(0);
     assertThat(out.toString()).isEqualTo("Foo.java" + System.lineSeparator());
+  }
+
+  @Test
+  public void reflowLongStrings() throws Exception {
+    String[] input = {
+      "class T {", //
+      "  String s = \"one long incredibly unbroken sentence moving from topic to topic so that no"
+          + " one had a chance to interrupt\";",
+      "}"
+    };
+    String[] expected = {
+      "class T {",
+      "  String s =",
+      "      \"one long incredibly unbroken sentence moving from topic to topic so that no one had"
+          + " a chance\"",
+      "          + \" to interrupt\";",
+      "}",
+      "",
+    };
+    InputStream in = new ByteArrayInputStream(joiner.join(input).getBytes(UTF_8));
+    StringWriter out = new StringWriter();
+    Main main =
+        new Main(
+            new PrintWriter(out, true),
+            new PrintWriter(new BufferedWriter(new OutputStreamWriter(System.err, UTF_8)), true),
+            in);
+    assertThat(main.format("-")).isEqualTo(0);
+    assertThat(out.toString()).isEqualTo(joiner.join(expected));
+  }
+
+  @Test
+  public void noReflowLongStrings() throws Exception {
+    String[] input = {
+      "class T {", //
+      "  String s = \"one long incredibly unbroken sentence moving from topic to topic so that no"
+          + " one had a chance to interrupt\";",
+      "}"
+    };
+    String[] expected = {
+      "class T {",
+      "  String s =",
+      "      \"one long incredibly unbroken sentence moving from topic to topic so that no one had"
+          + " a chance to interrupt\";",
+      "}",
+      "",
+    };
+    InputStream in = new ByteArrayInputStream(joiner.join(input).getBytes(UTF_8));
+    StringWriter out = new StringWriter();
+    Main main =
+        new Main(
+            new PrintWriter(out, true),
+            new PrintWriter(new BufferedWriter(new OutputStreamWriter(System.err, UTF_8)), true),
+            in);
+    assertThat(main.format("--skip-reflowing-long-strings", "-")).isEqualTo(0);
+    assertThat(out.toString()).isEqualTo(joiner.join(expected));
+  }
+
+  @Test
+  public void noFormatJavadoc() throws Exception {
+    String[] input = {
+      "/**",
+      " * graph",
+      " *",
+      " * graph",
+      " *",
+      " * @param foo lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do"
+          + " eiusmod tempor incididunt ut labore et dolore magna aliqua",
+      " */",
+      "class Test {",
+      "  /**",
+      "   * creates entropy",
+      "   */",
+      "  public static void main(String... args) {}",
+      "}",
+      "",
+    };
+    InputStream in = new ByteArrayInputStream(joiner.join(input).getBytes(UTF_8));
+    StringWriter out = new StringWriter();
+    Main main =
+        new Main(
+            new PrintWriter(out, true),
+            new PrintWriter(new BufferedWriter(new OutputStreamWriter(System.err, UTF_8)), true),
+            in);
+    assertThat(main.format("--skip-javadoc-formatting", "-")).isEqualTo(0);
+    assertThat(out.toString()).isEqualTo(joiner.join(input));
   }
 }
